--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <param name="movie" value="Seedling.swf" />
     <param name="quality" value="high" />
     <param name="AllowScriptAccess" value="always" />
-    Adobe Flash Not Enabled!
+    <a href="http://www.adobe.com/go/getflash">
+      <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif"
+        alt="Get Adobe Flash player" />
+    </a>
   </object>
 
   <div id="text_log"></div>
@@ -22,6 +25,8 @@
   <br> port: <input id="server_port" type="text" />
   <br> name: <input id="server_name" type="text" />
   <br> <button id="connect_to_server">Connect to Server</button>
+  <div id="connection_status">Disconnected</div>
+  Seal count: <div id="seal-count">0</div>
 
 </body>
 
